# whisper-cpp-plus-rs

./: .gitignore  .gitmodules  CACHING_GUIDE.md  Cargo.toml  README.md  enhanced-optimizations-plan-phase-1.md  enhanced-optimizations-plan.md  faster-whisper-python-analysis.md  implementation-plan.md  quantize-refactor-plan.md  session-resume.md  type-safety-verification.md  windows-linking-fix.md
.cargo/: config.toml
docs/: ARCHITECTURE.md  CACHING_GUIDE.md  PUBLISHING_GUIDE.md  TECHNICAL_REFERENCE.md
examples/: streaming.rs
whisper-cpp-plus/: Cargo.toml  README.md
whisper-cpp-plus-sys/: Cargo.toml  README.md  build.rs  cuda_detect.rs
whisper-cpp-plus-sys/src/: lib.rs  quantize_wrapper.cpp
whisper-cpp-plus/benches/: enhanced_fallback_bench.rs  enhanced_vad_bench.rs
whisper-cpp-plus/examples/: async_transcribe.rs  basic.rs  compare_vad.rs  enhanced_vad.rs  minimal.rs  stream_pcm.rs  streaming.rs  streaming_reuse_demo.rs  temperature_fallback.rs
whisper-cpp-plus/src/: async_api.rs  lib.rs  quantize.rs  stream_pcm.rs
whisper-cpp-plus/tests/: quantization.rs  real_audio.rs  vad_integration.rs
whisper-cpp-rs/: Cargo.toml
whisper-cpp-rs/benches/: enhanced_fallback_bench.rs  enhanced_vad_bench.rs  transcription.rs
whisper-cpp-rs/examples/: async_transcribe.rs  basic.rs  compare_vad.rs  enhanced_vad.rs  streaming.rs  streaming_reuse_demo.rs  temperature_fallback.rs
whisper-cpp-rs/src/: buffer.rs  context.rs  lib.rs  params.rs  quantize.rs  stream.rs  vad.rs
whisper-cpp-rs/tests/: integration.rs  quantization.rs  (+4 more)
whisper-quantize/: Cargo.toml  README.md
whisper-quantize/examples/: quantize_model.rs
whisper-quantize/src/: lib.rs
whisper-quantize/tests/: quantization.rs
whisper-sys/: Cargo.toml  README.md  build.rs
whisper-sys/src/: lib.rs
xtask/: Cargo.toml  README.md
(+3 files in other folders)
